# ObjectDetection

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  entrypoint.sh
src/: __init__.py  api.py  tools.py  utils.py
