[tool.poetry]
name = "objectdetection"
version = "0.1.0"
description = ""
authors = ["Sergi Garcia Sarroca <g.sarroca.sergi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.114"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
